--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,78 @@
-h1 {
-    background-color: red;
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 15px 0;
+    background-color: var(--primary-color);
+    color: var(--second-color);
+    border-radius: 0 0 10px 10px;
+}
+
+header img {
+    width: 80px;
+}
+
+main {
+    padding: 30px;
+}
+
+.inserir-produto {
+    border: 3px solid var(--primary-color);
+    border-radius: 10px;
+    padding: 15px;
+}
+
+form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 25px;
+    font-size: 20px;
+}
+
+form > div {
+    display: flex;
+    flex-direction: column;
+}
+
+form input, form select {
+    font-size: 16px;
+    padding: 5px 10px;
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+    width: 100px;
+}
+
+.input-nome input {
+    width: 200px;
+}
+
+.input-valor input, .input-quantidade input {
+    width: 70px;
+}
+
+.input-categoria select {
+    width: 150px;
+}
+
+.input-validade input {
+    width: 150px;
+}
+
+.input-perecivel .respostas input {
+    width: 30px;
+}
+
+button {
+    background-color: var(--primary-color);
+    height: 50px;
+    width: 100px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
 }
