--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,58 @@
-<h1>Olá eu sou o H1</h1>
+<header>
+  <img src="../assets/logo.jpeg" alt="logo">
+  <h1>Inventário UI</h1>
+</header>
+<main>
+  <section class="inserir-produto">
+    <h1>Inserir Produtos</h1>
+    <form action="">
+      <div class="input-nome">
+        <label for="nome">Nome:</label>
+        <input type="text" name="nome" id="nome">
+      </div>
+
+      <div class="input-categoria">
+        <label for="categoria">Categoria:</label>
+        <select name="categoria" id="categoria">
+          <option selected disabled>Selecione</option>
+          <option value="alimento">Alimentos</option>
+          <option value="roupa">Roupas</option>
+          <option value="eletronico">Eletrônicos</option>
+          <option value="livro">Livros</option>
+          <option value="arte">Arte</option>
+          <option value="outro">Outro</option>
+        </select>
+      </div>
+
+      <div class="input-valor">
+        <label for="valor">Valor:</label>
+        <input type="text" name="valor" id="valor">
+      </div>
+
+      <div class="input-validade">
+        <label for="validade">Data de validade:</label>
+        <input type="date" name="validade" id="validade">
+      </div>
+
+      <div class="input-quantidade">
+        <label for="quantidade">Quantidade:</label>
+        <input type="number" name="quantidade" id="quantidade">
+      </div>
+
+      <div class="input-perecivel">
+        <span>É perecível?</span>
+        <div class="respostas">
+            <label for="resposta1"><input type="radio" id="resposta1" name="isPerecivel" value="true"/>Sim</label>
+            
+            <label for="resposta2"><input type="radio" id="resposta2" name="isPerecivel" value="false" />Não</label>
+        </div>
+      </div>
+
+      <button type="submit">Adicionar</button>
+    </form>
+  </section>
+
+</main>
+<footer>
+
+</footer>
