Construção da section Listar Produtos

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -52,6 +52,55 @@
     </form>
   </section>
 
+  <section class="listar-produtos">
+    <h1>Lista de Produtos</h1>
+
+    <div id="container">
+      <table>
+        <thead>
+          <tr>
+              <th>Nome</th>
+              <th>Categoria</th>
+              <th>Valor</th>
+              <th>Data de validade</th>
+              <th>Quantidade</th>
+              <th>É perecível?</th>
+              <th>Opções</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Saco de Arroz</td>
+            <td>Alimentos</td>
+            <td>R$10,50</td>
+            <td>19/07/2002</td>
+            <td>20</td>
+            <td>Sim</td>
+            <td>
+              <div class="options">
+                <i class="ri-pencil-fill"></i>
+                <i class="ri-delete-bin-fill"></i>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Saco de Arroz</td>
+            <td>Alimentos</td>
+            <td>R$10,50</td>
+            <td>19/07/2002</td>
+            <td>20</td>
+            <td>Sim</td>
+            <td>
+              <div class="options">
+                <i class="ri-pencil-fill"></i>
+                <i class="ri-delete-bin-fill"></i>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
 </main>
 <footer>
 
