--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -15,10 +15,13 @@ header img {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
     padding: 30px;
 }
 
-.inserir-produto {
+section {
     border: 3px solid var(--primary-color);
     border-radius: 10px;
     padding: 15px;
@@ -66,13 +69,34 @@ form input, form select {
     width: 30px;
 }
 
-button {
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+thead {
     background-color: var(--primary-color);
-    height: 50px;
-    width: 100px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 16px;
     color: white;
+}
+
+th, td {
+    border: 2px solid black;
+    padding: 5px 10px;
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: var(--table-color);
+}
+
+div#container {
+    overflow-x: auto;
+}
+
+.options {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    font-size: 20px;
 }
