Construção do footer

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,7 @@
   <img src="../assets/logo.jpeg" alt="logo">
   <h1>Inventário UI</h1>
 </header>
+
 <main>
   <section class="inserir-produto">
     <h1>Inserir Produtos</h1>
@@ -103,5 +104,10 @@
   </section>
 </main>
 <footer>
-
+  <p>Obrigado pela oportunidade. Espero que gostem!</p>
+  <div class="social-media">
+    <a href="https://github.com/luclopesr" target="_blank"><i class="ri-github-fill"></i></a>
+    <a href="https://www.linkedin.com/in/luclopesr/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+    <a href="https://portfolio-lucaslopes.netlify.app/" target="_blank"><i class="ri-folder-open-fill"></i></a>
+  </div>
 </footer>
