--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -4,7 +4,7 @@ header {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    padding: 15px 0;
+    padding: 15px 5px;
     background-color: var(--primary-color);
     color: var(--second-color);
     border-radius: 0 0 10px 10px;
@@ -19,6 +19,8 @@ main {
     flex-direction: column;
     gap: 30px;
     padding: 30px;
+    max-width: 1400px;
+    margin: auto;
 }
 
 section {
@@ -99,4 +101,25 @@ div#container {
     flex-wrap: wrap;
     justify-content: space-evenly;
     font-size: 20px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 15px 5px;
+    font-size: 18px;
+}
+
+footer p {
+    font-weight: 500;
+    text-align: center;
+}
+
+footer .social-media {
+    display: flex;
+    gap: 10px;
+    font-size: 30px;
 }
