--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,10 @@
-<header>
+<app-navbar></app-navbar>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<!-- <header>
   <img src="../assets/logo.jpeg" alt="logo">
   <h1>Inventário UI</h1>
 </header>
@@ -16,12 +22,12 @@
         <label for="categoria">Categoria:</label>
         <select name="categoria" id="categoria">
           <option selected disabled>Selecione</option>
-          <option value="alimento">Alimentos</option>
-          <option value="roupa">Roupas</option>
-          <option value="eletronico">Eletrônicos</option>
-          <option value="livro">Livros</option>
-          <option value="arte">Arte</option>
-          <option value="outro">Outro</option>
+          <option value="1">Alimentos</option>
+          <option value="2">Roupas</option>
+          <option value="3">Eletrônicos</option>
+          <option value="4">Livros</option>
+          <option value="5">Arte</option>
+          <option value="6">Outro</option>
         </select>
       </div>
 
@@ -43,9 +49,9 @@
       <div class="input-perecivel">
         <span>É perecível?</span>
         <div class="respostas">
-            <label for="resposta1"><input type="radio" id="resposta1" name="isPerecivel" value="true"/>Sim</label>
+            <label for="resposta1"><input type="radio" id="resposta1" name="perecivel" value="true"/>Sim</label>
             
-            <label for="resposta2"><input type="radio" id="resposta2" name="isPerecivel" value="false" />Não</label>
+            <label for="resposta2"><input type="radio" id="resposta2" name="perecivel" value="false" />Não</label>
         </div>
       </div>
 
@@ -110,4 +116,4 @@
     <a href="https://www.linkedin.com/in/luclopesr/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
     <a href="https://portfolio-lucaslopes.netlify.app/" target="_blank"><i class="ri-folder-open-fill"></i></a>
   </div>
-</footer>
+</footer> -->
