--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,6 +12,12 @@
     font-family: 'Poppins', sans-serif;
 }
 
+section {
+    border: 3px solid var(--primary-color);
+    border-radius: 10px;
+    padding: 15px;
+}
+
 button {
     background-color: var(--primary-color);
     height: 50px;
