Reestruturação do frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,119 +1,8 @@
-<app-navbar></app-navbar>
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-
-<!-- <header>
-  <img src="../assets/logo.jpeg" alt="logo">
-  <h1>Inventário UI</h1>
-</header>
+<app-header></app-header>
 
 <main>
-  <section class="inserir-produto">
-    <h1>Inserir Produtos</h1>
-    <form action="">
-      <div class="input-nome">
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" id="nome">
-      </div>
-
-      <div class="input-categoria">
-        <label for="categoria">Categoria:</label>
-        <select name="categoria" id="categoria">
-          <option selected disabled>Selecione</option>
-          <option value="1">Alimentos</option>
-          <option value="2">Roupas</option>
-          <option value="3">Eletrônicos</option>
-          <option value="4">Livros</option>
-          <option value="5">Arte</option>
-          <option value="6">Outro</option>
-        </select>
-      </div>
-
-      <div class="input-valor">
-        <label for="valor">Valor:</label>
-        <input type="text" name="valor" id="valor">
-      </div>
-
-      <div class="input-validade">
-        <label for="validade">Data de validade:</label>
-        <input type="date" name="validade" id="validade">
-      </div>
-
-      <div class="input-quantidade">
-        <label for="quantidade">Quantidade:</label>
-        <input type="number" name="quantidade" id="quantidade">
-      </div>
-
-      <div class="input-perecivel">
-        <span>É perecível?</span>
-        <div class="respostas">
-            <label for="resposta1"><input type="radio" id="resposta1" name="perecivel" value="true"/>Sim</label>
-            
-            <label for="resposta2"><input type="radio" id="resposta2" name="perecivel" value="false" />Não</label>
-        </div>
-      </div>
-
-      <button type="submit">Adicionar</button>
-    </form>
-  </section>
-
-  <section class="listar-produtos">
-    <h1>Lista de Produtos</h1>
-
-    <div id="container">
-      <table>
-        <thead>
-          <tr>
-              <th>Nome</th>
-              <th>Categoria</th>
-              <th>Valor</th>
-              <th>Data de validade</th>
-              <th>Quantidade</th>
-              <th>É perecível?</th>
-              <th>Opções</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Saco de Arroz</td>
-            <td>Alimentos</td>
-            <td>R$10,50</td>
-            <td>19/07/2002</td>
-            <td>20</td>
-            <td>Sim</td>
-            <td>
-              <div class="options">
-                <i class="ri-pencil-fill"></i>
-                <i class="ri-delete-bin-fill"></i>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Saco de Arroz</td>
-            <td>Alimentos</td>
-            <td>R$10,50</td>
-            <td>19/07/2002</td>
-            <td>20</td>
-            <td>Sim</td>
-            <td>
-              <div class="options">
-                <i class="ri-pencil-fill"></i>
-                <i class="ri-delete-bin-fill"></i>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </section>
+  <app-form></app-form>
+  <router-outlet></router-outlet>
 </main>
-<footer>
-  <p>Obrigado pela oportunidade. Espero que gostem!</p>
-  <div class="social-media">
-    <a href="https://github.com/luclopesr" target="_blank"><i class="ri-github-fill"></i></a>
-    <a href="https://www.linkedin.com/in/luclopesr/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
-    <a href="https://portfolio-lucaslopes.netlify.app/" target="_blank"><i class="ri-folder-open-fill"></i></a>
-  </div>
-</footer> -->
+
+<app-footer></app-footer>
