--- a/frontend/src/app/components/produtos/produtos.component.html
+++ b/frontend/src/app/components/produtos/produtos.component.html
@@ -18,24 +18,10 @@
                 <tr *ngFor="let prod of produtos">
                     <td>{{ prod.nome }}</td>
                     <td>{{ prod.categoria }}</td>
-                    <td>{{ prod.valor }}</td>
+                    <td>R${{ prod.valor }}</td>
                     <td>{{ prod.validade }}</td>
                     <td>{{ prod.quantidade }}</td>
                     <td>{{ prod.perecivel }}</td>
-                    <td>
-                        <div class="options">
-                            <i class="ri-pencil-fill"></i>
-                            <i class="ri-delete-bin-fill"></i>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Saco de Arroz</td>
-                    <td>Alimentos</td>
-                    <td>R$10,50</td>
-                    <td>19/07/2002</td>
-                    <td>20</td>
-                    <td>Sim</td>
                     <td>
                         <div class="options">
                             <i class="ri-pencil-fill"></i>
