--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,6 +12,15 @@
     font-family: 'Poppins', sans-serif;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 30px;
+    max-width: 1400px;
+    margin: auto;
+}
+
 section {
     border: 3px solid var(--primary-color);
     border-radius: 10px;
