--- a/frontend/src/app/components/produtos/produtos.component.html
+++ b/frontend/src/app/components/produtos/produtos.component.html
@@ -1,3 +1,52 @@
+<section class="inserir-produto">
+    <h1>Inserir Produtos</h1>
+    <form (ngSubmit)="insertData()">
+        <div class="input-nome">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" id="nome" required [(ngModel)]="produto.nome">
+        </div>
+
+        <div class="input-categoria">
+            <label for="categoria">Categoria:</label>
+            <select name="categoria" id="categoria" required [(ngModel)]="produto.categoria">
+                <option selected disabled value="">Selecione</option>
+                <option value="1">Alimentos</option>
+                <option value="2">Roupas</option>
+                <option value="3">Eletrônicos</option>
+                <option value="4">Livros</option>
+                <option value="5">Arte</option>
+                <option value="6">Outro</option>
+            </select>
+        </div>
+
+        <div class="input-valor">
+            <label for="valor">Valor:</label>
+            <input type="number" name="valor" id="valor" required [(ngModel)]="produto.valor">
+        </div>
+
+        <div class="input-validade">
+            <label for="validade">Data de validade:</label>
+            <input type="date" name="validade" id="validade" [(ngModel)]="produto.validade">
+        </div>
+
+        <div class="input-quantidade">
+            <label for="quantidade">Quantidade:</label>
+            <input type="number" name="quantidade" id="quantidade" required [(ngModel)]="produto.quantidade">
+        </div>
+
+        <div class="input-perecivel">
+            <span>É perecível?</span>
+            <div class="respostas">
+                <label for="resposta1"><input type="radio" id="resposta1" name="perecivel" value="true" [(ngModel)]="produto.perecivel"/>Sim</label>
+                
+                <label for="resposta2"><input type="radio" id="resposta2" name="perecivel" value="false" [(ngModel)]="produto.perecivel"/>Não</label>
+            </div>
+        </div>
+
+        <button type="submit">Adicionar</button>
+    </form>
+</section>
+
 <section class="listar-produtos">
     <h1>Lista de Produtos</h1>
 
