Funcionalidade de deletar

--- a/frontend/src/app/components/produtos/produtos.component.html
+++ b/frontend/src/app/components/produtos/produtos.component.html
@@ -74,7 +74,7 @@
                     <td>
                         <div class="options">
                             <i class="ri-pencil-fill"></i>
-                            <i class="ri-delete-bin-fill"></i>
+                            <i class="ri-delete-bin-fill" (click)="deleteData(prod.id)"></i>
                         </div>
                     </td>
                 </tr>
