Funcionalidade de editar

--- a/frontend/src/app/components/produto-edit/produto-edit.component.html
+++ b/frontend/src/app/components/produto-edit/produto-edit.component.html
@@ -1,6 +1,6 @@
 <section class="inserir-produto">
-    <h1>Inserir Produtos</h1>
-    <form (ngSubmit)="insertData()">
+    <h1>Editar Produto</h1>
+    <form (ngSubmit)="updateProduto()">
         <div class="input-nome">
             <label for="nome">Nome:</label>
             <input type="text" name="nome" id="nome" required [(ngModel)]="produto.nome">
@@ -43,42 +43,6 @@
             </div>
         </div>
 
-        <button type="submit">Adicionar</button>
+        <button type="submit">Atualizar</button>
     </form>
-</section>
-
-<section class="listar-produtos">
-    <h1>Lista de Produtos</h1>
-
-    <div id="container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Categoria</th>
-                    <th>Valor</th>
-                    <th>Data de validade</th>
-                    <th>Quantidade</th>
-                    <th>É perecível?</th>
-                    <th>Opções</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let prod of produtos">
-                    <td>{{ prod.nome }}</td>
-                    <td>{{ prod.categoria }}</td>
-                    <td>R${{ prod.valor }}</td>
-                    <td>{{ prod.validade }}</td>
-                    <td>{{ prod.quantidade }}</td>
-                    <td>{{ prod.perecivel }}</td>
-                    <td>
-                        <div class="options">
-                            <i class="ri-pencil-fill" routerLink="edit/{{ prod.id }}"></i>
-                            <i class="ri-delete-bin-fill" (click)="deleteData(prod.id)"></i>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
 </section>
