--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,10 +13,7 @@
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
     max-width: 1400px;
     margin: auto;
 }
@@ -25,6 +22,7 @@ section {
     border: 3px solid var(--primary-color);
     border-radius: 10px;
     padding: 15px;
+    margin-bottom: 30px;
 }
 
 button {
